[package]
name = "icb-client"
version = "0.1.0"
authors = ["Jasper Lievisse Adriaanse <j@jasper.la>"]
edition = "2018"
description = "minimalistic ICB client"
repository = "https://github.com/jasperla/icb-rs"
keywords = ["icb", "tui"]
license = "ISC"
readme = "README.md"

[badges]
maintenance = { status = "experimental" }

[dependencies]
icb = { path = "../icb", version = "0.1" }
crossbeam-utils = "0.7"
