[package]
name = "icb"
version = "0.1.0"
authors = ["Jasper Lievisse Adriaanse <j@jasper.la>"]
edition = "2018"
description = "small library for writing ICB clients"
repository = "https://github.com/jasperla/icb-rs"
keywords = ["icb", "chat", "tcp"]
categories = ["network-programming"]
license = "ISC"
readme = "README.md"

[badges]
maintenance = { status = "experimental"  }

[dependencies]
crossbeam-channel = "0.4"
crossbeam-utils = "0.7"
